--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container{
+  width:100%;
+  height:100vh;
+  background: cornflowerblue;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sub-container{
+  margin-top: 60px;
+  width:25%;
+  height:80vh;
+  background-color: #f4f4f4;
+  box-shadow: 5px 5px 25px -5px  rgba(0,0,0,0.5);
+  border-radius: 20px;
 }
+h1{
+  color:white;
+  background: transparent;
+  background-color: #8566aa;
+  padding: 6px 0 2px 0;
+  margin-bottom: 20px;
+  box-shadow: 5px 5px -15px 5px  rgba(0,0,0,0.3);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+input{
+  text-align: center;
+  height:30px;
+  top:10px;
+  border:none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width:60%;
+  border-bottom: 2px solid #8566aa;
+  outline: none;
+}
+button{
+  min-height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border-color:transparent;
+  background-color: #8566aa;
+  color:#fff;
+  font-size: 40px;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  box-shadow: 5px 5px 15px -5px  rgba(0,0,0,0.3) ;
+}
+button:hover{
+  background-color: green;
+}
+ol li{
+  padding-left: 0px;
+  text-align: left;
+  font-weight: 500;
+  min-height: 40px;
+  display:flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color:#8566aa;
+  text-transform: capitalize;
+  font-size: 2rem;
+  margin-left: 70px;
+
+}
+.deleteIcon{
+  position:relative;
+  right:140px;
+  top:40px;
   color: white;
+  background-color: blue;
+  background-position: center;
+  border-radius: 40px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.deleteIcon:hover{
+  background-color: red;
+  
 }
