--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+body{
+  height: 100vh;
+  background: #0F52BA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
 .container{
   width:100%;
-  height:100vh;
-  background: cornflowerblue;
+  height:80vh;
   display:flex;
   flex-direction: row;
   justify-content: center;
   text-align: center;
 }
-.sub-container{
-  margin-top: 60px;
-  width:25%;
-  height:80vh;
+.box{
+  width:300px;
+  height: 100%;
   background-color: #f4f4f4;
   box-shadow: 5px 5px 25px -5px  rgba(0,0,0,0.5);
-  border-radius: 20px;
+  border-radius: 5px;
+  overflow:hidden;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  
+}
+.sub-container{
+  background-color: #f4f4f4;
+  overflow-y: auto;
+  height:60vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 10px;
 }
 h1{
   color:white;
   background: transparent;
-  background-color: #8566aa;
-  padding: 6px 0 2px 0;
+  text-transform: uppercase;
+  background-color: #002366;
+  padding: 10px 0 20px 0;
   margin-bottom: 20px;
   box-shadow: 5px 5px -15px 5px  rgba(0,0,0,0.3);
 
@@ -32,21 +56,25 @@ h1{
 input{
   text-align: center;
   height:30px;
-  top:10px;
   border:none;
   background: transparent;
   font-size: 20px;
   font-weight: 500;
-  width:60%;
-  border-bottom: 2px solid #8566aa;
+  width:80%;
+  border-bottom: 2px solid #002366;
   outline: none;
 }
+
+input[type="text"]::placeholder { 
+  text-align: left;
+}
+
 button{
   min-height: 40px;
   width: 40px;
-  border-radius: 50%;
+  border-radius: 5px;
   border-color:transparent;
-  background-color: #8566aa;
+  background-color: #002366;
   color:#fff;
   font-size: 40px;
   border: none;
@@ -55,31 +83,54 @@ button{
   box-shadow: 5px 5px 15px -5px  rgba(0,0,0,0.3) ;
 }
 button:hover{
-  background-color: green;
+  background-color: #FFD371;
 }
-ol li{
-  padding-left: 0px;
-  text-align: left;
-  font-weight: 500;
-  min-height: 40px;
-  display:flex;
-  align-items: center;
-  color:#8566aa;
-  text-transform: capitalize;
-  font-size: 2rem;
-  margin-left: 70px;
-
+ol {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .deleteIcon{
   position:relative;
-  right:140px;
-  top:40px;
+  display: inline-block;
+  margin-right: 5px;
   color: white;
-  background-color: blue;
+  background-color: #0F52BA;
   background-position: center;
-  border-radius: 40px;
+  border-radius: 5px;
 }
 .deleteIcon:hover{
-  background-color: red;
+  background-color: #FF2626;
   
+}
+
+.todo{
+  display: flex;
+  padding: 5px 10px;
+  margin: 5px 0;
+  align-items: center;
+  border-radius: 5px;
+  width: 90%;
+  background-color: #FFDAB9;
+}
+
+.task-name{
+  display: inline-block;
+  text-transform: capitalize;
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-left: 10px;
+}
+
+.todo:last-child{
+  margin-bottom: 50px;
+}
+
+@media only screen and (min-width: 600px) {
+  .box{
+    width: 500px;
+  }
+  .todo{
+    padding: 10px 20px;
+    margin: 5px 0;
+  }
 }
